# TDLS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  docs.yml
cmake/: tdlsConfig.cmake.in
docs/: Doxyfile
docs/sphinx/: getting_started.md  index.md  tests.md  tfel_interoperability.md
examples/tiled_lupp/cpu_openmp/: integral_equation_batch_omp.cpp
examples/tiled_lupp/cpu_sequential/: integral_equation.cpp
examples/tiled_lupp/gpu_cuda_or_hip/: implicit_ode_batch_gpu_soa.cu
include/tdls/: tdls.hpp
include/tdls/core/: adaptors.hpp  macros.hpp  version.hpp
include/tdls/solvers/tiled_lu/: config.hpp  solver_dynamic.hpp  solver_static.hpp  tile_ops.hpp
include/tdls/solvers/tiled_lupp/: solver_dynamic.hpp  solver_static.hpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  backward_error.cpp  generators.hpp  harness.hpp  reference_lu.hpp
tests/solvers/: CMakeLists.txt  residency_runner.hpp  test_adaptors.cpp  test_config_knobs.cpp  test_cross_full.cpp  test_dynamic_edges.cpp  test_entry_points.cpp  test_inplace_paths.cpp  test_layouts.cpp  test_oracle_dynamic.cpp  test_oracle_static.cpp  test_residencies.cpp  test_singular.cpp  test_static_vs_dynamic.cpp  test_tile_sizes.cpp
tests/solvers/tiled_lupp/: reject_adaptors_const_matrix.cpp  reject_adaptors_const_pivot.cpp  test_config_knobs.cpp  test_cross_full.cpp  test_entry_points.cpp  test_inplace_paths.cpp  test_residencies.cpp
